--- a/app/src/main/res/layout/fragment_gmaps.xml
+++ b/app/src/main/res/layout/fragment_gmaps.xml
@@ -2,11 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/map_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </RelativeLayout>
+
+    <fragment
+
+        android:layout_width="match_parent"
+        android:id="@+id/map_layout"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+
+
+        />
+
+
 
 </FrameLayout>
