--- a/app/src/main/res/layout/fragment_mensagem.xml
+++ b/app/src/main/res/layout/fragment_mensagem.xml
@@ -1,6 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:id="@+id/listView2" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:hint="Nome"
+            android:ems="10"
+            android:id="@+id/editTextNome"
+            android:textSize="15dp" />
+
+
+        <EditText
+            android:id="@+id/edittextComentario"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:hint="Comentario"
+            android:layout_below="@+id/spinner"
+            android:layout_above="@+id/botaoEnvia"
+            android:background="@drawable/edittext"
+            android:gravity="top"
+            android:textSize="15dp"
+            android:layout_marginLeft="0dp"
+            android:autoText="false"
+            android:padding="5dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enviar"
+            android:id="@+id/botaoEnvia"
+            android:layout_alignParentBottom="true"
+
+            android:layout_alignParentEnd="true" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editTextNome"
+            android:layout_alignEnd="@+id/botaoEnvia" />
+    </RelativeLayout>
+
 
 </LinearLayout>
