--- a/app/src/main/res/layout/fragment_onibus.xml
+++ b/app/src/main/res/layout/fragment_onibus.xml
@@ -3,13 +3,83 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragOnibus"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/layout">
 
     <TextView
-        android:layout_width="166dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView2"
-        android:layout_weight="0.12" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Busk"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="O que fazer nessa tela?"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Como ver os pontos?"
+        android:id="@+id/textView11"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="E os horarios?"
+        android:id="@+id/textView12"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tem algo de errado com o seu onibus?"
+        android:id="@+id/textView13"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quer escolher outro onibus?"
+        android:id="@+id/textView14"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:focusableInTouchMode="false"
+        android:textColor="#0c0059"
+        android:layout_margin="20dp" />
 </LinearLayout>
